--- a/Resources/Buttons.resx
+++ b/Resources/Buttons.resx
@@ -123,6 +123,12 @@
   <data name="Create" xml:space="preserve">
     <value>Create Value</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="Login" xml:space="preserve">
+    <value>Login</value>
+  </data>
   <data name="Reset" xml:space="preserve">
     <value>Reset</value>
   </data>
