--- a/Resources/Messages.resx
+++ b/Resources/Messages.resx
@@ -126,4 +126,13 @@
   <data name="RequiredFieldValidator" xml:space="preserve">
     <value>You did not specify {0}!</value>
   </data>
+  <data name="RequiredValidationErrorMessage" xml:space="preserve">
+    <value>You did not specify {0}!</value>
+  </data>
+  <data name="YouCanSelectAnItem" xml:space="preserve">
+    <value>You Can Select an Item</value>
+  </data>
+  <data name="YouShouldSelectAnItem" xml:space="preserve">
+    <value>You Should Select an Item</value>
+  </data>
 </root>
